--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -148,7 +148,7 @@ on emmc-fs
     mount ext4 /dev/block/mmcblk0p6 /cache nosuid nodev barrier=1
     write /sys/module/block2mtd/parameters/block2mtd /dev/block/mmcblk0p7
     wait /dev/block/mmcblk0p14
-    mount vfat /dev/block/mmcblk0p14 /storage/sdcard0 uid=1000,gid=1015,umask=0002,utf8
+    mount vfat /dev/block/mmcblk0p14 /storage/internal_sd uid=1000,gid=1015,umask=0002,utf8
     mkdir /.cust_backup
     mount vfat /dev/block/mmcblk0p1 /.cust_backup rw wait
     mkdir /cust 
