--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -293,11 +293,11 @@ service map1 /system/bin/sdptool add --channel=17 MAS1
     oneshot   
     
 
-service dhcpcd_eth0 /system/bin/dhcpcd -BKL
+service dhcpcd_eth0 /system/bin/dhcpcd -aABDKL
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -BKLG
+service dhcpcd_p2p /system/bin/dhcpcd -ABKLG
     class late_start
     disabled
     oneshot
@@ -312,7 +312,7 @@ service iprenew_p2p /system/bin/dhcpcd -n p2p
     disabled
     oneshot
 
-service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
+service dhcpcd_bnep0 /system/bin/dhcpcd -ABKLG
     disabled
     oneshot
 
