--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -38,33 +38,47 @@ on boot
 
 # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/load 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
     setprop wifi.interface eth0
 
-    # Enable Bluetooth 802.11 PAL when Bluetooth is turned on
+# Enable Bluetooth 802.11 PAL when Bluetooth is turned on
     setprop ro.config.bt.amp no
 
-    #port-bridge
+# allow system to modify ksm control files
+    chown root system /sys/kernel/mm/ksm/pages_to_scan
+    chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
+    chown root system /sys/kernel/mm/ksm/sleep_millisecs
+    chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
+    chown root system /sys/kernel/mm/ksm/run
+    chmod 0664 /sys/kernel/mm/ksm/run
+    write /sys/kernel/mm/ksm/sleep_millisecs 1500
+    write /sys/kernel/mm/ksm/pages_to_scan 256
+
+# Vibrator intensity control
+    chown system system /sys/class/timed_output/vibrator/voltage_level
+
+#port-bridge
     chmod 0660 /dev/smd0
     chown system system /dev/smd0
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
-    # create symlink for fb1 as HDMI
+# create symlink for fb1 as HDMI
     symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
-    # Remove write permissions to video related nodes
+# Remove write permissions to video related nodes
     chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
     chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
     chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
 
-    # Change owner and group for media server and surface flinger
+# Change owner and group for media server and surface flinger
     chown system system /sys/devices/virtual/graphics/fb1/format_3d
 
-    #For bridgemgr daemon to inform the USB driver of the correct transport
+#For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
 
 # To allow interfaces to get v6 address when tethering is enabled
@@ -195,6 +209,7 @@ on post-fs-data
 
     chmod 0666 /proc/cmdline
     setprop vold.post_fs_data_done 1
+    wm size 480x854
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmcblk0p11 /dev/block/mmcblk0p17
     class main
@@ -240,8 +255,8 @@ service hciattach /system/bin/brcm_patchram_plus -d --enable_hci --enable_lpm --
     group qcom_oncrpc bluetooth net_bt_admin
     disabled
     oneshot
-    
- #Bluetooth Fix by Desalesouche
+
+#Bluetooth new by des
 
 on property:init.svc.bluetoothd=running
     write /sys/class/bluetooth/hci0/idle_timeout 7000
@@ -290,8 +305,7 @@ service map1 /system/bin/sdptool add --channel=17 MAS1
     user bluetooth
     group bluetooth net_bt_admin
     disabled
-    oneshot   
-    
+    oneshot
 
 service dhcpcd_eth0 /system/bin/dhcpcd -aABDKL
     disabled
@@ -353,16 +367,23 @@ on property:ro.baseband="msm"
 on property:ro.baseband="unknown"
     start port-bridge
 
-# Wifi-Tethering
+# Wifi - Tethering
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
-    
-  service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
+
+on property:wlan.driver.status=unloaded
+    start hwmac
+
+service hwmac /system/bin/hwmac
+    class main
+    oneshot
+
+service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
     class main
     user root
     group root
     oneshot
-    disabled  
+    disabled
 
 on property:ro.emmc=1
     start rmt_oeminfo
