A bunch of updates and fixes.

--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -16,6 +16,15 @@ on init
     symlink /storage/sdcard1 /sdcard
     symlink /storage/sdcard0 /mnt/emmc
     symlink /storage/sdcard0 /HWUserData
+    
+    # IDEOS X5 Settings
+    chown system system /sys/devices/platform/msm_otg/mode
+    chown system system /sys/devices/platform/msm_hsusb/gadget/manual_chg_current
+    
+    # Hardware tunables
+    chown root system /sys/class/timed_output/vibrator/voltage_level
+    chmod 0664 /sys/class/timed_output/vibrator/voltage_level
+    restorecon /sys/class/timed_output/vibrator/voltage_level
 
 on boot
     exec system/bin/btnvtool -O
