--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -8,6 +8,9 @@ on init
     mkdir /storage/sdcard0 0700 root root
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
+
+    mkdir /mnt/media_rw/usbdisk 0700 media_rw media_rw
+    mkdir /storage/usbdisk 0700 root root
      
     export EXTERNAL_STORAGE /storage/sdcard1
     export SECONDARY_STORAGE /storage/sdcard0
@@ -16,15 +19,17 @@ on init
     symlink /storage/sdcard1 /sdcard
     symlink /storage/sdcard0 /mnt/emmc
     symlink /storage/sdcard0 /HWUserData
-    
-    # IDEOS X5 Settings
-    chown system system /sys/devices/platform/msm_otg/mode
-    chown system system /sys/devices/platform/msm_hsusb/gadget/manual_chg_current
-    
-    # Hardware tunables
-    chown root system /sys/class/timed_output/vibrator/voltage_level
-    chmod 0664 /sys/class/timed_output/vibrator/voltage_level
-    restorecon /sys/class/timed_output/vibrator/voltage_level
+
+# USB OTG support
+    mkdir /mnt/media_rw/usbdisk 0700 media_rw media_rw
+    mkdir /storage/usbdisk 0700 root root
+    symlink /storage/usbdisk /mnt/usbdisk
+    symlink /mnt/usbdisk /usbdisk
+
+    EXPORT SECONDARY_STORAGE /storage/usbdisk
+
+# We will remap this as /mnt/sdcard with the sdcard fuse tool
+    mkdir /data/media 0770 media_rw media_rw
 
 on boot
     exec system/bin/btnvtool -O
@@ -52,7 +57,31 @@ on boot
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+    symlink /persist/qcom_wlan_nv.bin /etc/firmware/wlan/qcom_wlan_nv.bin
+    symlink /data/hostapd/qcom_cfg.ini /etc/firmware/wlan/qcom_cfg.ini
+    mkdir /data/hostapd 0770 root root
+    #Provide the access to hostapd.conf only to root and group
+    chmod 0660 /data/hostapd/hostapd.conf
     setprop wifi.interface eth0
+    mkdir /data/wpstiles/ 0777 shell
+    mkdir /data/wiper 0777 location qcom_oncrpc
+
+    # Read only 1 page at a time
+    write /proc/sys/vm/page-cluster 0
+
+    # USB charging
+    chown system system /sys/module/msm_battery/parameters/usb_chg_enable
+
+    # vibrator intensity
+    chown system system /sys/devices/virtual/timed_output/vibrator/vtg_level
+
+    # Button backlight
+    chown system system /sys/class/leds/button-backlight/max_brightness
+
+# Boost the CPU for 30 secs during boot, bump to 1.2GHz
+    write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 1200000
+    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 30000000
+    write /sys/devices/system/cpu/cpufreq/interactive/boostpulse 1
 
 # Enable Bluetooth 802.11 PAL when Bluetooth is turned on
     setprop ro.config.bt.amp no
@@ -66,9 +95,7 @@ on boot
     chmod 0664 /sys/kernel/mm/ksm/run
     write /sys/kernel/mm/ksm/sleep_millisecs 1500
     write /sys/kernel/mm/ksm/pages_to_scan 256
-
-# Vibrator intensity control
-    chown system system /sys/class/timed_output/vibrator/voltage_level
+    write /sys/kernel/mm/ksm/run 1
 
 #port-bridge
     chmod 0660 /dev/smd0
@@ -87,7 +114,7 @@ on boot
 # Change owner and group for media server and surface flinger
     chown system system /sys/devices/virtual/graphics/fb1/format_3d
 
-#For bridgemgr daemon to inform the USB driver of the correct transport
+ #For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
 
 # To allow interfaces to get v6 address when tethering is enabled
@@ -143,8 +170,19 @@ on boot
     chown system system /sys/devices/platform/msm_hsusb/gadget/fixusb
     chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
 
+# Define TCP buffer sizes for various networks
+# ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
+    setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
+    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
+    setprop net.tcp.buffersize.lte     524288,1048576,2097152,262144,524288,1048576
+    setprop net.tcp.buffersize.umts    4094,87380,110208,4096,16384,110208
+    setprop net.tcp.buffersize.hspa    4094,87380,1220608,4096,16384,1220608
     setprop net.tcp.buffersize.hsupa   4094,87380,1220608,4096,16384,1220608
     setprop net.tcp.buffersize.hsdpa   4094,87380,1220608,4096,16384,1220608
+    setprop net.tcp.buffersize.hspap 4094,87380,1220608,4096,16384,1220608
+    setprop net.tcp.buffersize.edge 4093,26280,35040,4096,16384,35040
+    setprop net.tcp.buffersize.gprs 4092,8760,11680,4096,8760,11680
+    setprop net.tcp.buffersize.evdo    4096,87380,563200,4096,16384,262144
     setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
 
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
@@ -183,7 +221,7 @@ on post-fs
     chmod 0640 /data/dontpanic/modem_panic
 
 # msm specific files that need to be created on /data
-on post-fs-data
+    on post-fs-data
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
     chmod 0666 /sys/class/rfkill/rfkill0/state
@@ -197,6 +235,13 @@ on post-fs-data
     write /data/btaddr 0
     chown bluetooth system /data/btaddr
     chmod 0660 /data/btaddr
+
+# Create the directories used by the Wireless subsystem
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+
+# Create directory used by audio subsystem
+    mkdir /data/misc/audio 0770 audio audio
 
 # Chown polling nodes as needed from UI running on system server
     chown system system /persist
@@ -245,8 +290,14 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
 
+service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
+    user root
+    group system qcom_oncrpc
+    disabled
+    oneshot
+
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
-    -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf \
+    -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf -dd \
     -O/data/misc/wifi/sockets \
     -e/data/misc/wifi/entropy.bin \
     -g@android:wpa_eth0
@@ -315,6 +366,23 @@ service map1 /system/bin/sdptool add --channel=17 MAS1
     disabled
     oneshot
 
+service ril-daemon /system/bin/rild
+    class main
+    socket rild stream 660 root radio
+    socket rild-debug stream 660 radio system
+    user root
+    disabled
+    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
+
+service ril-daemon1 /system/bin/rild -c 1
+    class main
+    socket rild1 stream 660 root radio
+    socket rild-debug1 stream 660 radio system
+    user root
+    disabled
+    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
+
+
 service dhcpcd_eth0 /system/bin/dhcpcd -aABDKL
     disabled
     oneshot
@@ -379,31 +447,47 @@ on property:ro.baseband="unknown"
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
-on property:wlan.driver.status=unloaded
-    start hwmac
-
-service hwmac /system/bin/hwmac
+service hwprops /system/bin/hwprops
     class main
     oneshot
 
 service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
+    socket wpa_weth0 dgram 660 wifi wifi
     class main
     user root
     group root
     oneshot
     disabled
 
+service ds_fmc_appd /system/bin/ds_fmc_appd -p "rmnet0" -D
+    group radio
+    disabled
+    oneshot
+
+on property:persist.data.ds_fmc_app.mode=1
+    start ds_fmc_appd
+
+service ims_regmanager /system/bin/exe-ims-regmanagerprocessnative
+    user system
+    group qcom_oncrpc net_bt_admin inet radio wifi
+    disabled
+
+service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+     class late_start
+     disabled
+
 on property:ro.emmc=1
     start rmt_oeminfo
     start rmt_storage
-    
-service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
-     class late_start
-     disabled    
 
 on property:ro.use_data_netmgrd=false
 # netmgr not supported on specific target
     stop netmgrd
+
+#Backport of extra_free_kbytes to Jellybean and KK
+ 
+on property:sys.sysctl.extra_free_kbytes=*
+    write /proc/sys/vm/extra_free_kbytes ${sys.sysctl.extra_free_kbytes}
 
 # FUSE sdcard daemon for rich permissions (runs as media_rw)
 service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0 /storage/sdcard0
@@ -414,6 +498,6 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1
     class late_start
     disabled
 
-service fuse_usbdisk0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usbdisk0 /storage/usbdisk0
+service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
     disabled
